--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,7 +38,7 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the docker images
       - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY URI: $IMAGE_TAG
+      - docker push $REPOSITORY URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG
       - echo Writing image definitions file...
       - printf '[{"name":"userContainer","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
 artifacts:
