--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
   install:
     runtime-versions:
       docker: 18
-  pre build:
+  pre_build:
     commands:
       - echo Logging into Amazon ECR
       - aws --version
