--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,7 @@ phases:
       - echo build started on `date`
       - echo testing code with sonar
       - mvn clean install -D"sonar.login"=$LOGIN -D"sonar.host.url"=$HOST -D"sonar.projectKey"=$Project -D"sonar.organization"=$Organization
-      - Sleep 5
+      - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=$Project >result.json
       - cat result.json
       - if [ $(jq -r '.projectStatus.status' result.json) = ERROR ] ; then $CODEBUILD_BUILD_SUCCEEDING -eq 0 ;fi
@@ -38,7 +38,7 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the docker images
       - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG
+      - docker push $REPOSITORY_URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG
       - echo Writing image definitions file...
       - printf '[{"name":"order_ms","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
 artifacts:
