--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ env:
 phases:
   install:
     runtime-versions:
-      docker: 18
+      docker: ["18"]
   pre_build:
     commands:
       - echo Logging into Amazon ECR
