--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,14 +32,16 @@ phases:
       - echo generating jar
       - echo building the docker image.....
       - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the docker images
+      - eval $(aws ecr get-login --no-include-email | sed 's|https://||') 
       - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"order_ms","imageUri":"%s"}]' $REPOSITORY_URI:347797620150.dkr.ecr.ap-south-1.amazonaws.com/order_ms $IMAGE_TAG > imagedefinitions.json 
+      - printf '[{"name":"order_ms","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
+     
 artifacts:
   files: imagedefinitions.json
