--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,10 @@
 version: 0.2
 env:
   secrets-manager:
-    LOGIN: OrderMS:fd34e2bcaead1586516dd094f4325ea613d1988e
-    HOST: OrderMS:https://sonarcloud.io
-    Organization: OrderMS:lochannimje
-    Project: OrderMS:team12:OrderMS
+    LOGIN: OrderMS1:fd34e2bcaead1586516dd094f4325ea613d1988e
+    HOST: OrderMS1:https://sonarcloud.io
+    Organization: OrderMS1:lochannimje
+    Project: OrderMS1:team12:OrderMS
 phases:
   install:
     runtime-versions:
