--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=Order
 server.port=8200
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://orderdb.c9qsrkdrweln.ap-south-1.rds.amazonaws.com/ordermanagement
+spring.datasource.url=jdbc:mysql://orderdb.c9qsrkdrweln.ap-south-1.rds.amazonaws.com:8000/orderdb
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
