--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   secrets-manager:
-    LOGIN: OrderMS:63d0518144fed329f9c30e9a62681bd4ae7031a4
-    HOST: OrderMS:https://sonarcloud.io
-    Organization: OrderMS:lochannimje
-    Project: OrderMS:team12:OrderMS
+    LOGIN: OrderMS:sonartoken
+    HOST: OrderMS:host
+    Organization: OrderMS:organization
+    Project: OrderMS:projectKey
     
 phases:
   install:
