--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ env:
     HOST: OrderMS:host
     Organization: OrderMS:organization
     Project: OrderMS:projectKey
-    
+
 phases:
   install:
     runtime-versions:
@@ -39,11 +39,10 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the docker images
-      - eval $(aws ecr get-login --no-include-email | sed 's|https://||') 
+      - eval $(aws ecr get-login --no-include-email | sed 's|https://||')
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"orderContainer","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
-     
+      - printf '[{"name":"ordercontainer","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-  files: imagedefinitions.json
+    files: imagedefinitions.json
